DWX-3642 HIVE-20295: Remove !isNumber check after failed constant interpretation (Ivan Suller via Zoltan Haindrich)
Signed-off-by: Zoltan Haindrich <kirk@rxd.hu>
(cherry picked from commit 269dc5dde1e8290da93f204f2bb951bd4af40098)
Change-Id: Ia3550b2642cc338f152f00dccef5c99f00313311